# wake-up

./: .gitignore  Cargo.toml  README.md  dockerfile  dockerfile_dev
.github/workflows/: Build&Test.yml  build_and_test.yml  docker.yml  docker_dev.yml  release_dev.yml  release_main.yml
hooks/: pre-commit
scripts/ci/: create_pre_release.sh  create_release.sh
src/: auth.rs  configuration.rs  group.rs  host.rs  main.rs  reader.rs  wol.rs
src/api/: auth.rs  configuration.rs  mod.rs  pages.rs
src/routes/: catchers.rs  errors.rs  mod.rs  pages.rs
src/routes/api/: configuration.rs  groups.rs  hosts.rs  login.rs  mod.rs
src/routes/guard/: token.rs
static/: style.css
templates/: 404.html.tera  base.html.tera  index.html.tera  login.html.tera
tests/: intergration.sh
