[package]
name = "wake-up"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"]}
rocket_dyn_templates = { version = "0.2", features = ["tera"]}
serde = { version = "1.0.213", features = ["derive"] }
yaml-rust = " 0.4.5"
hmac = "0.12.1"
sha2 = "0.10.8"
jwt = "0.16.0"