[package]
name = "wake-up"
version = "1.0.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"]}
rocket_dyn_templates = { version = "0.2", features = ["tera"]}
serde = { version = "1.0.213", features = ["derive"] }
figment = { version = "0.10", features = ["env", "toml", "json"] }
env_logger = "0.11.5"
yaml-rust = " 0.4.5"
hmac = "0.12.1"
sha2 = "0.10.8"
jwt = "0.16.0"
log = "0.4.22"
